buildscript {
    ext {
        springBootVersion = '2.3.2.RELEASE'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

sourceCompatibility = 15

compileJava {
    options.compilerArgs += ['--enable-preview']
}

group 'com.github.andreyelagin.spotifyplay'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation          'org.springframework.boot:spring-boot-starter-webflux'
    implementation          'org.springframework.boot:spring-boot-starter-data-r2dbc'
    implementation          'io.github.resilience4j:resilience4j-ratelimiter:1.6.1'
    implementation          'io.github.resilience4j:resilience4j-reactor:1.6.1'
    implementation          'se.michaelthelin.spotify:spotify-web-api-java:6.4.0'

    runtimeOnly             'io.r2dbc:r2dbc-postgresql'
    runtimeOnly             'org.postgresql:postgresql'

    annotationProcessor     'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor     'org.projectlombok:lombok:1.18.14'
    compileOnly             'org.projectlombok:lombok:1.18.14'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.14'
    testCompileOnly         'org.projectlombok:lombok:1.18.14'

    testCompile             'org.springframework.boot:spring-boot-starter-test'
    testCompile             'io.projectreactor:reactor-test'
    testCompile             'org.junit.jupiter:junit-jupiter:5.6.1'
    testCompile             'org.hamcrest:hamcrest:2.2'
    testCompile             ('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}
